# crawler_gazebo

./: CMakeLists.txt  docs.md  package.xml  readme.md
config/: simsetting.yaml
config/gazebo_environment/: benchmark.yaml  continuesramp.yaml  continuesramp_ramp.yaml
config/gazebo_environment/singlerane/: bridge.yaml  continuesramp.yaml  continuesramp_ramp.yaml  continuesramp_ramp_withstart.yaml  krails.yaml  krails_ramp.yaml  krails_ramp_wall.yaml  krails_ramp_wall_withstart.yaml  pallet15.yaml  pallet30.yaml  stair.yaml  step.yaml  stepfield.yaml  stepfield_ramp.yaml  steps.yaml
config/robot/: README.md  compact.yaml  default.yaml  large.yaml
gazebo_model/model/1.4explosive/: 1.4explosive_1.dae  model.config  model.sdf
gazebo_model/model/1.5blasting_agent/: 1.5blastingagent_1.dae  model.config  model.sdf
gazebo_model/model/10cmstep/: 10cmstep.stl  model.config  model.sdf
gazebo_model/model/10degramp/: 10degramp.stl  model.config  model.sdf
gazebo_model/model/1mcube/: 1mcube.stl  model.config  model.sdf
gazebo_model/model/20cmstep/: 20cmstep.stl  model.config  model.sdf
gazebo_model/model/20degramp/: 20degramp.stl  model.config  model.sdf
gazebo_model/model/20mwall/: 20mwall.stl  model.config  model.sdf
gazebo_model/model/30cmstep/: 30cmstep.stl  model.config  model.sdf
gazebo_model/model/30degramp/: 30degramp.stl  model.config  model.sdf
gazebo_model/model/40cmstep/: 40cmstep.stl  model.config  model.sdf
gazebo_model/model/40degramp/: 40degramp.stl  model.config  model.sdf
gazebo_model/model/45degstair/: 45degstair.stl  model.config  model.sdf
gazebo_model/model/45degstair20cm/: Stair_45deg_20cm.stl  model.config  model.sdf
gazebo_model/model/50cmstep/: 50cmstep.stl  model.config  model.sdf
gazebo_model/model/avoid/: avoid.stl  model.config  model.sdf
gazebo_model/model/bridge376/: Bridge_376mm.stl  model.config  model.sdf
gazebo_model/model/continuesramp/: model.config  model.sdf
gazebo_model/model/continuous_ramp_plane/: continuous_ramp_plane.dae  model.config  model.sdf
gazebo_model/model/continuous_ramp_slope/: continuous_ramp_slope.dae  model.config  model.sdf
gazebo_model/model/default_plane/: default_plane.stl  model.config  model.sdf
gazebo_model/model/default_slope/: default_slope.stl  model.config  model.sdf
gazebo_model/model/hurdles/: hurdles.dae  model.config  model.sdf
gazebo_model/model/krail_plane_10cm/: KRail_plane_10cm.dae  model.config  model.sdf
gazebo_model/model/krail_plane_20cm/: KRail_plane_20cm.dae  model.config  model.sdf
gazebo_model/model/krail_slope_10cm/: KRail_slope_10cm.dae  model.config  model.sdf
gazebo_model/model/krail_slope_20cm/: KRail_slope_20cm.dae  KRail_slope_20cm.stl  model.config  model.sdf
gazebo_model/model/krails/: Krails_120_240.stl  model.config  model.sdf
gazebo_model/model/origin/: model.config  model.sdf  origin.dae
gazebo_model/model/pallet15/: Pallet_15cm.stl  model.config  model.sdf
gazebo_model/model/pallet30/: Pallet_30cm.stl  model.config  model.sdf
gazebo_model/stl/: ContinuesRamp_120_120.stl  ContinuesRamp_120_240.stl  StepField_120_120.stl  StepField_120_240.stl  wall_120.stl
launch/: 2dnav.launch  gazebo.launch.py  gazebo_cloudmap_publisher.launch.py  gazebo_ignition.launch.py  model_pointcloud.launch.py
launch/rviz/: crawler.rviz  recording.rviz  visualization.rviz
pcd/: benchmark.pcd  bridges.pcd
scripts/: analyze_bridge_contacts.py  generate_crawler_urdf.py  plot_bridge_contact_summary.py  ramdom_world.py
src/: contact_points_publisher.cpp  crawler_gazebo_drive_plugin.cpp  crawler_ignition_control_bridge.cpp  nearest_xy_height_goal_node.cpp  pc2_frame_change.cpp  pc2_frame_change_se2.cpp  spawn_robocup_arena.py
src/point_cloud/: cloudmap_to_pcd.cpp  gazebo_to_octomap_publisher.cpp  gazebo_to_octomap_publisher_gap_fill.cpp  gridmap_publisher.cpp  voxel_overhang_removal.cpp
src/ros_control/: 2d_nav_goal_publisher.cpp  gazebo_gui.cpp
urdf/: compact_crawler.urdf  default_crawler.urdf  large_crawler.urdf
world/: 45degstair20cm  45degstair_40cm  base_fields.world  box.sdf  continuous_plane.world  continuous_ramp.world  hardle.world  krail.world  krail_flat.world  random.world  sample.world  sample_hardle.world  simpleavoid.world  step_30cm.world  test.world
world/experiment/: 20cm0deg.world  20cm30deg.world  20cm45deg.world  20cm60deg.world  20cm80deg.world  20deg.world  30cm0deg.world  30cm30deg.world  30cm45deg.world  30cm60deg.world  30cm80deg.world  30deg.world  40cm30deg.world  40cm45deg.world  40cmstep.world  crosswall  experiment.world  stair20cm45deg.world  stepfield.world
(+62 files in other folders)
